[gd_scene load_steps=17 format=3 uid="uid://q1jsmk1qap2h"]

[ext_resource type="Script" path="res://Candidate/creature_scene.gd" id="1_2rtne"]
[ext_resource type="Script" path="res://Candidate/creature_current_design.gd" id="3_06wxs"]
[ext_resource type="Texture2D" uid="uid://it0jm63qnnl7" path="res://Sprites/candidate_sprites/to_the_first_power_speedup.png" id="4_brbea"]
[ext_resource type="Texture2D" uid="uid://crmddsueki0y1" path="res://Sprites/hitbox.png" id="4_gyfsk"]
[ext_resource type="Texture2D" uid="uid://dspq231is0lgr" path="res://Sprites/candidate_sprites/initial_creature.png" id="4_lfr8q"]
[ext_resource type="Script" path="res://Candidate/PauseMenu.gd" id="5_1mdtg"]
[ext_resource type="Texture2D" uid="uid://bduhxin25f47f" path="res://Sprites/candidate_sprites/to_the_first_power_speedup_attack.png" id="5_r3vvy"]
[ext_resource type="Texture2D" uid="uid://br7pmh83nluvw" path="res://Sprites/candidate_sprites/visHitbox.png" id="6_8qial"]
[ext_resource type="Texture2D" uid="uid://wvdya48gprbb" path="res://Sprites/candidate_sprites/visHitboxAttack.png" id="7_yowte"]
[ext_resource type="Texture2D" uid="uid://cxiobwfp8t3us" path="res://Sprites/candidate_sprites/visHitbox_smallHitbox.png" id="8_5wc6g"]
[ext_resource type="AudioStream" uid="uid://bkgn5lfmf3j8o" path="res://Sounds/sfx/BulletSFX.mp3" id="8_sei1r"]
[ext_resource type="AudioStream" uid="uid://dwlb2e1v6q5v6" path="res://Sounds/sfx/ChangeFormJingle.mp3" id="9_lw680"]
[ext_resource type="Texture2D" uid="uid://pe5ut4j84mxd" path="res://Sprites/candidate_sprites/vHB_smHBAttack.png" id="9_mutum"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5b3on"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_r3vvy")
}, {
"duration": 1.0,
"texture": ExtResource("4_brbea")
}],
"loop": true,
"name": &"speed_ani",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_yowte")
}, {
"duration": 1.0,
"texture": ExtResource("6_8qial")
}],
"loop": false,
"name": &"vis_hit_ani",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_oslm4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_mutum")
}, {
"duration": 1.0,
"texture": ExtResource("8_5wc6g")
}],
"loop": false,
"name": &"vis_speed_ani",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rglyc"]
size = Vector2(70, 63)

[node name="Creature_Scene" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_2rtne")

[node name="creature_current_design" type="Sprite2D" parent="."]
position = Vector2(-5.72205e-06, 1.90735e-06)
texture = ExtResource("4_lfr8q")
script = ExtResource("3_06wxs")

[node name="shoot_animation" type="AnimatedSprite2D" parent="creature_current_design"]
visible = false
position = Vector2(1.56539e-05, -5.09661e-06)
sprite_frames = SubResource("SpriteFrames_5b3on")
animation = &"vis_hit_ani"

[node name="shoot_animation_2" type="AnimatedSprite2D" parent="creature_current_design"]
visible = false
sprite_frames = SubResource("SpriteFrames_oslm4")
animation = &"vis_speed_ani"

[node name="change_form_sfx" type="AudioStreamPlayer" parent="creature_current_design"]
stream = ExtResource("9_lw680")
bus = &"Sfx"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 1.5)
shape = SubResource("RectangleShape2D_rglyc")

[node name="hitbox" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_gyfsk")

[node name="Node2D" type="Node2D" parent="."]
top_level = true

[node name="PauseMenu" type="Panel" parent="Node2D"]
process_mode = 3
visible = false
clip_contents = true
custom_minimum_size = Vector2(1200, 700)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_1mdtg")

[node name="MainMenu" type="Button" parent="Node2D/PauseMenu"]
layout_mode = 0
offset_left = 100.0
offset_top = 225.0
offset_right = 1050.0
offset_bottom = 350.0
text = "Main Menu"

[node name="LastPitStop" type="Button" parent="Node2D/PauseMenu"]
layout_mode = 0
offset_left = 100.0
offset_top = 400.0
offset_right = 1050.0
offset_bottom = 525.0
text = "Return To Last Pitstop"

[node name="Music" type="HSlider" parent="Node2D/PauseMenu"]
layout_mode = 0
offset_left = 50.0
offset_top = 545.0
offset_right = 500.0
offset_bottom = 645.0

[node name="Music Volume" type="Label" parent="Node2D/PauseMenu/Music"]
layout_mode = 0
offset_left = 150.0
offset_top = 65.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 22
text = "Music Volume"
horizontal_alignment = 1

[node name="SFX" type="HSlider" parent="Node2D/PauseMenu"]
layout_mode = 0
offset_left = 650.0
offset_top = 545.0
offset_right = 1100.0
offset_bottom = 645.0

[node name="SFX" type="Label" parent="Node2D/PauseMenu/SFX"]
layout_mode = 0
offset_left = 150.0
offset_top = 65.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 22
text = "SFX Volume"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Node2D/PauseMenu"]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 1050.0
offset_bottom = 175.0
text = "Resume"

[node name="shoot_sfx" type="AudioStreamPlayer" parent="Node2D/PauseMenu"]
stream = ExtResource("8_sei1r")
volume_db = -2.0
bus = &"Sfx"

[connection signal="pause" from="Node2D/PauseMenu" to="." method="_on_pause_menu_pause"]
[connection signal="resume" from="Node2D/PauseMenu" to="." method="_on_pause_menu_resume"]
[connection signal="pressed" from="Node2D/PauseMenu/MainMenu" to="Node2D/PauseMenu" method="_on_main_menu_pressed"]
[connection signal="pressed" from="Node2D/PauseMenu/LastPitStop" to="Node2D/PauseMenu" method="_on_last_pit_stop_pressed"]
[connection signal="value_changed" from="Node2D/PauseMenu/SFX" to="Node2D/PauseMenu" method="_on_sfx_value_changed"]
[connection signal="pressed" from="Node2D/PauseMenu/Resume" to="Node2D/PauseMenu" method="_on_resume_pressed"]
